governance-shared/baselines/1.16.3/references/01-daily-report-rules.md
# 鏃ユ姤鐢熸垚绾︽潫瑙勫垯

鏈鍒欓€傜敤浜庝釜浜烘棩鎶ャ€侀」鐩棩鎶ャ€佸懆鎶ョ殑鐢熸垚涓庤仈鍔ㄥ鐞嗐€傛ā鏉挎枃浠剁粺涓€瀛樻斁浜?`assets/templates/`銆?
---

## 1. 涓汉鏃ユ姤

### 1.1 杈撳叆鏉ユ簮

涓汉鏃ユ姤鏉ユ簮鍖呮嫭锛氬洟闃熸垚鍛樻彁浜ょ殑鏃ユ姤鏂囨湰銆佷細璁邯瑕佷腑鎻愬彇鐨勮鍔ㄩ」銆佷换鍔＄湅鏉夸腑鐨勭姸鎬佸彉鏇淬€?
### 1.2 涓汉鏃ユ姤妯℃澘

瀹屾暣妯℃澘瑙?`assets/templates/personal-daily-template.md`銆傛牸寮忚鐐癸細YAML 澶达紙doc_type: personal-daily锛? 鍏缁撴瀯锛堜粖鏃ュ畬鎴?/ 杩涜涓?/ 鏄庢棩璁″垝 / 闃诲浜嬮」 / 娼滃湪椋庨櫓 / 鎶曞叆宸ユ椂锛夈€?
### 1.2b 鏈褰掍竴鍖栭澶勭悊锛堟棩鎶ヨВ鏋愬墠缃楠わ級

瑙ｆ瀽涓汉鏃ユ姤鍓嶏紝AI 蹇呴』鎵ц鏈褰掍竴鍖栭澶勭悊锛屾祦绋嬭鐐癸細璇诲彇璇嶅簱 鈫?鍏?confirmed 闈欓粯鏇挎崲鍐嶅鐞嗙籂閿欐槧灏?鈫?鏈懡涓柊鏈鎸夌疆淇″害鍒ゅ畾鍏?`pending` 鈫?鐢熸垚鏍囧噯鍖栬緭鍏ラ€佸叆鏃ユ姤瑙ｆ瀽 鈫?杈撳嚭淇濈暀鍘熸枃鐗囨+褰掍竴鍖栫粨鏋?鐘舵€併€俙pending` 涓夊眰妯″瀷銆佺姝簨椤广€佺疆淇″害鍒ゅ畾涓庡綊涓€鍖栦紭鍏堢骇璇﹁ `17-domain-glossary-rules.md` 搂4/搂6锛堝畬鏁翠節姝ユ祦绋嬶級銆?
### 1.3 澶勭悊瑙勫垯

1. 涓汉鏃ユ姤蹇呴』鍖呭惈鍏宠仈浠诲姟 ID锛堝鏈夛級銆?2. 鏃ユ姤涓彁鍒?鍙兘""鎷呭績""濡傛灉"绛変笉纭畾琛ㄨ堪锛屽繀椤绘爣璁颁负娼滃湪椋庨櫓銆?3. 鏃ユ姤涓彁鍒?鏃犳硶""闃诲""绛夊緟"绛夛紝蹇呴』鏍囪涓洪棶棰樻垨闃诲銆?4. 鏃ユ姤缂哄け鍏宠仈 ID 鏃讹紝AI 搴旀彁绀鸿ˉ鍏咃紝涓嶅彲鑷缂栭€?ID銆?5. 鏃ユ姤鏂囦欢鍚嶅浐瀹氫负 `YYYY-MM-DD-{濮撳悕}.md`锛屽悓涓€浜哄悓涓€澶╁彧鍏佽瀛樺湪涓€浠姐€?6. 鍚屼竴浜哄悓涓€澶╁娆℃彁浜ゆ椂锛屽繀椤?*鍚堝苟杩藉姞**鍒板凡鏈夋棩鎶ワ紝涓嶅緱瑕嗙洊銆?7. 鍚堝苟瑙勫垯锛?   - **浠婃棩瀹屾垚**锛氳拷鍔犲埌鍒楄〃鏈熬锛屼繚鐣欏師浜嬮」銆?   - **杩涜涓?*锛氬悓浠诲姟鏈夎繘搴︽椂鏇存柊鎻忚堪锛屾柊浠诲姟杩藉姞銆?   - **鏄庢棩璁″垝**锛氳鐩栨洿鏂帮紙浠ユ渶鏂颁负鍑嗭級銆?   - **闃诲浜嬮」**锛氳拷鍔犳柊闃诲锛屼繚鐣欐湭瑙ｅ喅椤癸紱宸茶В鍐虫爣璁般€屽凡瑙ｅ喅銆嶃€?   - **娼滃湪椋庨櫓**锛氳拷鍔犳柊椋庨櫓锛屼繚鐣欏師椋庨櫓銆?   - **鎶曞叆宸ユ椂**锛氬悓妯″潡绱姞锛屼笉鍚屾ā鍧楁柊澧炶銆?8. 姣忔鍚堝苟鍚庯紝鍦ㄦ棩鎶ユ湯灏俱€屾洿鏂拌褰曘€嶈拷鍔犱竴琛屽悎骞舵棩蹇椼€?9. 妫€娴嬪埌鍚屼竴澶╁凡鏈夋棩鎶ユ椂锛屾彁绀恒€屾娴嬪埌 {濮撳悕} {鏃ユ湡} 宸叉湁鏃ユ姤锛屽皢鎵ц鍚堝苟鑰岄潪瑕嗙洊銆嶏紝骞跺湪鍚堝苟鍚庤緭鍑哄悎骞舵憳瑕併€?
### 1.4 鏃ユ姤鍚堝苟鏇存柊璁板綍

姣忎唤鏃ユ姤鏈熬蹇呴』鍖呭惈銆屾洿鏂拌褰曘€嶈〃锛屽惈鍒楋細`Time | Action | Items Added | Items Updated | Merged By`銆?
- Time锛氭搷浣滄椂闂达紝鏍煎紡 `YYYY-MM-DD HH:MM`銆?- Action锛歚create`锛堥娆″垱寤猴級/ `merge`锛堝悎骞惰拷鍔狅級/ `update`锛堜慨鏀瑰凡鏈夊唴瀹癸級銆?- Items Added / Items Updated锛氭湰娆℃柊澧?鏇存柊鐨勪簨椤规暟銆?- Merged By锛氭搷浣滀汉锛堢敤鎴峰鍚嶆垨 AI杈呭姪锛夈€?
### 1.5 璧勬簮鍙樺姩妫€娴嬶紙椤圭洰闆嗘ā寮忥級

椤圭洰闆嗘ā寮忎笅锛孉I 蹇呴』鎵弿涓汉鏃ユ姤涓殑璧勬簮鍙樺姩鍏抽敭璇嶏細

| 瑙﹀彂鍏抽敭璇?| 妫€娴嬫剰鍥?| 鑱斿姩鍔ㄤ綔 |
|---|---|---|
| 琚娊璋?/ 鍊熻皟 / 璋冨線 / 鏀彺鍏朵粬椤圭洰 | 浜哄憳娴佸嚭 | 鎻愮ず鏇存柊 `resource-register.md` 鐘舵€?+ 鐢熸垚 `transfer-log.md` 娴佽浆璁板綍 |
| 鏂板浜哄憳 / 鍔犲叆鍥㈤槦 / 鎶ュ埌 / 鍒板矖 | 浜哄憳娴佸叆 | 鎻愮ず鏇存柊 `resource-register.md` 鏂板璁板綍 |
| 璇峰亣 / 浼戝亣 / 浜у亣 / 鐥呭亣 / 浜嬪亣 | 涓存椂涓嶅彲鐢?| 鎻愮ず鐘舵€併€屼紤鍋囥€? 鍒ゆ柇鏄惁瑙﹀彂 B 瑙掓帴绠?|
| 绂昏亴 / 杈炶亴 / 绂诲満 / 閫€鍑?| 浜哄憳娴佸嚭锛堟案涔咃級 | 鎻愮ず鐘舵€併€屽凡绂诲満銆? 鐢熸垚娴佽浆璁板綍 + 璇勪及鐭ヨ瘑浜ゆ帴椋庨櫓 |
| 杞矖 / 瑙掕壊鍙樻洿 / 鎹㈤」鐩?| 瑙掕壊鍙樻洿 | 鎻愮ず鏇存柊瑙掕壊 + 鐢熸垚娴佽浆璁板綍 |
| 鍏奸【 / 鍏间换 / 鍚屾椂璐熻矗 | 鍒嗛厤鏂瑰紡鍙樻洿 | 鎻愮ず鍒嗛厤鏂瑰紡銆屽吋鑱屻€? 璇勪及椋庨櫓绛夌骇 |

**澶勭悊瑙勫垯锛?*

1. 妫€娴嬪埌鍏抽敭璇嶅悗锛孉I 涓嶅緱鑷淇敼 `resource-register.md` / `transfer-log.md`锛岃€屾槸鍦ㄦ棩鎶ユ湯灏捐緭鍑恒€岃祫婧愬彉鍔ㄥ缓璁洿鏂版竻鍗曘€嶏紝鐢遍」鐩粡鐞嗙‘璁ゅ悗鎵ц銆?2. 鑻ユ祦鍑烘秹鍙婂叧閿矾寰勪笂鐨勫敮涓€璐熻矗浜轰笖鏃?B 瑙掞紝蹇呴』浠ラ珮浼樺厛绾ц鍛婃彁绀恒€?3. 鑻ヤ汉鍛樺彉鍔ㄥ鑷存煇瀛愰」鐩彲鐢ㄤ汉鍔涗綆浜庡蹇嶅害涓嬮檺锛堣 `09-portfolio-rules.md`锛夛紝鏍囨敞銆岃祫婧愰闄╄Е鍙戙€嶃€?
**鍊欓€夎祫婧愬彉鏇达紙v1.6.1 鏂板锛夛細**

1. 鏃ユ姤涓煇浜哄弬涓庢煇椤圭洰浣?`resource-register.md` 鏈櫥璁版椂锛孉I **涓嶅緱鑷姩娣诲姞**锛屽彧鑳借緭鍑恒€屽€欓€夎祫婧愬彉鏇淬€嶃€?2. 鍊欓€夊彉鏇存爣璁颁负寰呯‘璁わ紝鐢遍」鐩粡鐞嗗喅瀹氭槸鍚︽洿鏂?register銆?3. 浜哄憳鍙樺姩淇″彿鍙兘浜х敓鍊欓€夊彉鏇达紝涓嶅緱鐩存帴瑕嗙洊 register銆?4. **绂佹琛屼负**锛氫笉寰楀皢鏃ユ姤涓嚭鐜扮殑浜哄憳鑷姩璁ゅ畾涓烘寮忔垚鍛橈紱涓嶅緱鏈粡纭淇敼 register銆?
**杈撳嚭鏍煎紡瑕佺偣锛?* 鍊欓€夎祫婧愬彉鏇翠笌璧勬簮鍙樺姩寤鸿鏇存柊娓呭崟鍧囧唴鑱斿湪鏃ユ姤鏈熬锛屽惈鍒?`鏉ユ簮 | 褰撳墠鐘舵€?| 涓€鑷存€у垽鏂?| 寤鸿鎿嶄綔`锛涘缓璁洿鏂版竻鍗曞啀闄勫姞娓呭崟琛ㄥご锛坄Resource ID | 寤鸿鍔ㄤ綔 | 鍘熷洜 | 浼樺厛绾锛夛紝鐢遍」鐩粡鐞嗙‘璁ゅ悗鎵ц锛孉I 涓嶅緱鐩存帴鏀?register銆?
---

## 2. 椤圭洰鏃ユ姤

### 2.1 鐢熸垚瑙勫垯

椤圭洰鏃ユ姤鐢卞涓釜浜烘棩鎶ユ眹鎬荤敓鎴愶細

```
N 浠戒釜浜烘棩鎶?鈫?姹囨€诲垎鏋?鈫?1 浠介」鐩棩鎶?```

### 2.2 椤圭洰鏃ユ姤妯℃澘

瀹屾暣妯℃澘瑙?`assets/templates/project-daily-template.md`銆傛牸寮忚鐐癸細YAML 澶达紙doc_type: project-daily锛? 鍏缁撴瀯锛堜粖鏃ヨ繘灞?浠诲姟瀹屾垚/杩涜涓?闃诲涓庨棶棰?鏂板椋庨櫓/閲岀▼纰戝奖鍝?鎴愭湰涓庡伐鏃?鏄庢棩閲嶇偣锛? 寤鸿鏇存柊娓呭崟 + 淇℃伅鏉ユ簮 + 涓嶇‘瀹氶」銆?
### 2.3 姹囨€昏鍒?
1. 椤圭洰鏃ユ姤蹇呴』瑕嗙洊鎵€鏈夋彁浜ょ殑涓汉鏃ユ姤锛屼笉鍙仐婕忋€?2. 椤圭洰鏃ユ姤蹇呴』鍏宠仈鍒板綋鍓嶉噷绋嬬銆?3. 浠诲姟鐘舵€佸繀椤讳笌 `tasks/board.md` 浜ゅ弶楠岃瘉锛屼笉涓€鑷存椂鏍囨敞宸紓銆?4. 鎴愭湰鏁版嵁蹇呴』涓?`plans/budget.md` 浜ゅ弶楠岃瘉銆?5. 涓汉鏃ユ姤涔嬮棿瀛樺湪鐭涚浘鏃讹紙濡傚悓涓€浠诲姟涓や汉鎶ュ憡涓嶅悓鐘舵€侊級锛屽繀椤绘爣娉ㄧ煕鐩惧苟鎻愮ず椤圭洰缁忕悊纭銆?6. **椤圭洰闆嗘ā寮?*涓嬶紝蹇呴』涓?`portfolio/resources/resource-register.md` 浜ゅ弶楠岃瘉浜哄憳鍙敤鎬э紝鏈櫥璁板垯鎻愮ず琛ュ厖銆?7. **椤圭洰闆嗘ā寮?*涓嬶紝璺ㄥ瓙椤圭洰璧勬簮鐨勩€岄渶鍗忚皟浜嬮」銆嶅繀椤绘爣娉?`[璺ㄩ」鐩甝` 骞跺缓璁悓姝ュ埌 `portfolio/reports/` 椤圭洰闆嗗懆鎶ャ€?
---

## 3. 鍛ㄦ姤

### 3.0 椤圭洰闆嗘ā寮忎笅鐨勫懆鎶ュ眰绾?
| 灞傜骇 | 鏂囦欢浣嶇疆 | 鍐呭 | 鐢熸垚鏂瑰紡 |
|---|---|---|---|
| 瀛愰」鐩懆鎶?| `ai/projects/{瀛愰」鐩畗/reports/weekly/YYYY/YYYY-Wxx.md` | 鍗曚釜瀛愰」鐩湰鍛ㄨ繘灞?| 瀛愰」鐩棩鎶ラ€愭棩绱Н |
| 椤圭洰闆嗘眹鎬诲懆鎶?| `ai/portfolio/reports/weekly/YYYY/YYYY-Wxx.md` | 鎵€鏈夊瓙椤圭洰姹囨€?+ 璺ㄩ」鐩簨椤?+ 璧勬簮鍏ㄦ櫙 | 瀛愰」鐩懆鎶ユ眹鎬荤敓鎴?|

**鐢熸垚閾捐矾锛?* 鍚勫瓙椤圭洰鏃ユ姤锛堟瘡鏃ワ級鈫?鍚勫瓙椤圭洰鍛ㄦ姤锛堟瘡鍛級鈫?椤圭洰闆嗘眹鎬诲懆鎶ワ紙璺ㄥ瓙椤圭洰鍚堝苟锛夈€?
**瑙﹀彂鏉′欢锛?* 鐢ㄦ埛瑕佹眰銆屽啓鍛ㄦ姤銆嶃€屽啓椤圭洰闆嗗懆鎶ャ€嶃€屾眹鎬诲懆鎶ャ€嶆椂锛岃嫢澶勪簬椤圭洰闆嗘ā寮忥紝蹇呴』鍚屾椂鐢熸垚鎴栨洿鏂伴」鐩泦姹囨€诲懆鎶ワ紝涓嶅緱鍙敓鎴愬瓙椤圭洰鍛ㄦ姤銆?
### 3.1 鐢熸垚妯″紡

鍛ㄦ姤闈炴渶缁堣Е鍙戝紡鐢熸垚锛岃€屾槸姣忔棩绱Н鏇存柊锛氭瘡鏃ラ」鐩棩鎶?鈫?杩藉姞/鏇存柊鏈懆鍛ㄦ姤鑽夌銆?
### 3.2 鍛ㄦ姤妯℃澘

瀹屾暣妯℃澘瑙?`assets/templates/weekly-report-template.md`銆傛牸寮忚鐐癸細YAML 澶达紙doc_type: weekly-report锛? 涔濇缁撴瀯锛堟湰鍛ㄦ瑕?瀹屾垚/鏂板椋庨櫓/鏂板闂/寤舵湡浠诲姟/閲岀▼纰戠姸鎬?鎴愭湰涓庨绠?闇€鍗忚皟浜嬮」/涓嬪懆璁″垝锛? 淇℃伅鏉ユ簮銆?
### 3.3 鏇存柊瑙勫垯

1. 姣忔鐢熸垚椤圭洰鏃ユ姤鍚庯紝AI 蹇呴』杈撳嚭銆屽懆鎶ュ缓璁洿鏂扮墖娈点€嶏紙鍛ㄦ姤鏂囦欢鐩爣 + 鏈懆瀹屾垚/鏂板椋庨櫓/鏂板闂/闇€鍗忚皟浜嬮」 鍥涚被 Updates锛岄檮鏉ユ簮鏃ユ姤璺緞锛夛紝鏍煎紡瑙?`assets/templates/weekly-report-template.md`銆?2. 鐢ㄦ埛浜哄伐澶嶅埗鍒板懆鎶ユ枃浠躲€?3. 鍛ㄦ姤姣忓懆涓€寮€鏂版枃浠讹紝涓婂懆鐘舵€佹敼涓恒€屽凡纭銆嶆垨銆屽凡褰掓。銆嶃€?4. 鍛ㄦ姤涓紩鐢ㄧ殑鎵€鏈?ID 蹇呴』涓庝簨瀹炴簮鏂囦欢涓€鑷淬€?
### 3.4 椤圭洰闆嗘眹鎬诲懆鎶ヨ鍒?
椤圭洰闆嗘ā寮忎笅锛岀敓鎴愬瓙椤圭洰鍛ㄦ姤鍚庯紝AI 蹇呴』棰濆杈撳嚭銆岄」鐩泦姹囨€诲懆鎶ユ洿鏂扮墖娈点€嶏紝鍚洓绫诲唴瀹癸細瀛愰」鐩眹鎬荤墖娈碉紙姒傝/閲岀▼纰?椋庨櫓/鎴愭湰鍋忓樊锛夈€佽法椤圭洰浜嬮」銆佽祫婧愬叏鏅〃銆佹暣浣?P&L 琛ㄣ€傛牸寮忚 `assets/templates/portfolio-weekly-template.md`銆?
**鐢熸垚瑙勫垯锛?*

1. 蹇呴』瑕嗙洊鎵€鏈夌撼鍏ョ鐞嗙殑瀛愰」鐩紝涓嶅彲閬楁紡銆?2. 璺ㄩ」鐩簨椤规潵婧愶細瀛愰」鐩懆鎶ユ爣娉?`[璺ㄩ」鐩甝` 鐨勯渶鍗忚皟浜嬮」銆乣transfer-log.md` 鏈懆鏂板娴佽浆璁板綍銆乣risks/board.md` 鏍囨敞銆岃法椤圭洰銆嶇殑椋庨櫓椤广€?3. 璧勬簮鍏ㄦ櫙琛ㄥ繀椤讳笌 `resource-register.md` 浜ゅ弶楠岃瘉銆?4. 鏁翠綋 P&L 蹇呴』姹囨€诲悇瀛愰」鐩?`plans/budget.md` 鏁版嵁銆?5. AI 涓嶅緱鑷纭椤圭洰闆嗘眹鎬诲懆鎶ワ紝蹇呴』杈撳嚭寤鸿鐗囨鐢遍」鐩粡鐞嗙‘璁ゅ悗鏇存柊銆?
---

## 4. 鏃ユ姤绱㈠紩缁存姢

### 4.1 鏈堝害绱㈠紩

姣忎釜 `YYYYMM/` 鐩綍蹇呴』缁存姢 `index.md`锛岃褰曡鏈堟棩鎶ョ储寮曘€傜储寮曞垪瀹氫箟涓庢牸寮忚 `assets/templates/index-formats.md`锛堟棩鎶ョ储寮曪級銆侫I 鐢熸垚鍛ㄦ姤鏃朵紭鍏堣绱㈠紩锛岃€岄潪閫愪釜鎵弿鎵€鏈夋棩鎶ユ枃浠讹紱浠呭綋绱㈠紩鎽樿涓嶈冻鏃舵墠璇诲彇鍏蜂綋鏃ユ姤銆?
### 4.2 鏃ユ姤鍚屾鐘舵€佺储寮?
`reports/daily/index.md` 璁板綍姣忓ぉ鏃ユ姤鍚屾鐘舵€侊紝鍚垪锛歚Date | Type | File | Owner | Summary | Task Sync | Risk Sync | Issue Sync | Weekly Sync`銆傚悓姝ョ姸鎬佸彇鍊硷細`pending` / `accepted` / `rejected` / `none`锛堟棤闇€瑕佸悓姝ラ」锛夈€?
---

## 5. 涓汉杩涘害鑷姩鑱斿姩

### 5.1 涓汉杩涘害姹囨€绘枃浠?
姣忎釜鍥㈤槦鎴愬憳缁存姢涓€浠戒釜浜鸿繘搴︽眹鎬绘枃浠?`reports/daily/personal/summaries/{name}-progress.md`锛屽嵆璇ユ垚鍛樺湪褰撳墠瀛愰」鐩腑鐨勫伐浣滆繘搴﹀叏璨岋紙褰撳墠浠诲姟銆侀噷绋嬬鍏宠仈銆侀闄╃偣銆佽繎鏈熻繘灞曟瑕侊級銆?
### 5.2 姹囨€绘枃浠剁粨鏋?
瀹屾暣缁撴瀯瑙?`assets/templates/personal-progress-template.md`銆傛牸寮忚鐐癸細YAML 澶达紙doc_type: personal-progress锛? 浜旀锛堝綋鍓嶄换鍔?璐熻矗鐨勯闄?璐熻矗鐨勯棶棰?杩戞湡杩涘睍姒傝/宸ユ椂鎶曞叆锛夈€?
### 5.3 鑷姩鑱斿姩瑙勫垯

褰撴煇涓垚鍛樼殑涓汉鏃ユ姤琚柊澧炴垨鏇存柊鏃讹紝AI 蹇呴』鑷姩鎵ц浠ヤ笅鑱斿姩锛?
| 鑱斿姩椤?| 婧?| 鐩爣 | 瑙勫垯 |
|---|---|---|---|
| 浠诲姟杩涘害鍚屾 | 鏃ユ姤"浠婃棩瀹屾垚"/"杩涜涓? | `summaries/{name}-progress.md`銆屽綋鍓嶄换鍔°€?| 鏇存柊瀵瑰簲浠诲姟瀹屾垚鐧惧垎姣斿拰鐘舵€?|
| 浠诲姟鐪嬫澘鍚屾 | 鏃ユ姤浠诲姟杩涘睍 | `tasks/board.md` | 宸插畬鎴愨啋寤鸿 done锛涜繘搴﹀彉鍖栤啋寤鸿鏇存柊鐧惧垎姣?|
| 閲岀▼纰戝叧鑱?| 鏃ユ姤鎻愬強閲岀▼纰?| `summaries/{name}-progress.md`銆屽綋鍓嶄换鍔°€?| 琛ュ厖浠诲姟鍏宠仈閲岀▼纰?|
| 椋庨櫓鑱斿姩 | 鏃ユ姤"鎷呭績"鈥滃彲鑳解€濃€滃鏋溾€?| `risks/risk-register.md` + 涓汉姹囨€汇€岃礋璐ｇ殑椋庨櫓銆?| 鏂板椋庨櫓鍊欓€夛紝鍚屾涓汉姹囨€?|
| 闂鑱斿姩 | 鏃ユ姤"闃诲"鈥滄棤娉曗€濃€滅瓑寰呪€?| `issues/issue-register.md` + 涓汉姹囨€汇€岃礋璐ｇ殑闂銆?| 鏂板闂鍊欓€夛紝鍚屾涓汉姹囨€?|
| 杩戞湡杩涘睍 | 鏃ユ姤瀹屾垚/杩涜涓?闃诲 | `summaries/{name}-progress.md`銆岃繎鏈熻繘灞曟瑕併€?| 杩藉姞涓€琛屽綋鏃ヨ繘灞曟瑕?|
| 宸ユ椂缁熻 | 鏃ユ姤鎶曞叆宸ユ椂 | `summaries/{name}-progress.md`銆屽伐鏃舵姇鍏ャ€?| 绱姞鍒板搴斿懆搴︾粺璁?|
| 鏈堝害绱㈠紩 | 鏃ユ姤鏂囦欢淇℃伅 | `YYYYMM/index.md` | 鏇存柊璇ユ棩鎶ョ储寮曡褰?|

### 5.4 鑱斿姩杈撳嚭鏍煎紡

妫€娴嬪埌鏃ユ姤鏇存柊鏃讹紝AI 杈撳嚭銆屼釜浜鸿繘搴﹁仈鍔ㄥ缓璁€嶏紝鍚簮鏃ユ姤鏍囪瘑涓庝竴寮犲缓璁〃锛堣仈鍔ㄩ」 / 鐩爣鏂囦欢 / 寤鸿鍔ㄤ綔 / Need Confirmation锛夛紝鏍煎紡瑙?`assets/templates/personal-progress-template.md`銆傛瘡涓姩浣滄寜 5.5 鏉冮檺鏍囨敞鏄惁闇€瑕佺‘璁ゃ€?
> "Need Confirmation"鍒楀惈涔夛細`proactive` 妯″紡涓嬶紝浣?涓闄╋紙鍚?board/risk/issue 鐨勮繃绋嬫€ф洿鏂帮級濉?鍚︼紙鍐欎负寰呯‘璁わ級"锛堝啓鍏ヤ簨瀹炴簮骞舵爣璁?`Confirmed By: 寰呯‘璁銆佺櫥璁?`pending-changes.md`锛夛紱缁堟€侊紙done/鍏抽棴/confirmed/绂诲満锛変笌楂橀闄╅」濉?鏄?锛堥』纭鍚庢墠鍐欙級銆?
### 5.5 鑱斿姩鏉冮檺瑙勫垯

| 鑱斿姩鐩爣 | 鏉冮檺 | 璇存槑 |
|---|---|---|
| `summaries/{name}-progress.md` | 浣庨闄╋紝鍙富鍔ㄦ洿鏂?| 涓汉宸ヤ綔瑙嗗浘锛岄潪浜嬪疄婧?|
| `YYYYMM/index.md` | 浣庨闄╋紝鍙富鍔ㄦ洿鏂?| 绱㈠紩鍙嚜鐢辨洿鏂?|
| `tasks/board.md` | 杩囩▼鎬ф洿鏂板彲鍐欎负寰呯‘璁?| 杩囩▼鎬ф洿鏂帮紙濡傜姸鎬佷腑閫?Owner/Due Date锛夊彲鍐欏叆骞舵爣璁?`Confirmed By: 寰呯‘璁銆佺櫥璁?`pending-changes.md`锛涚粓鎬侊紙done锛変粛楂橀闄╅渶纭 |
| `risks/risk-register.md` | 杩囩▼鎬ф洿鏂板彲鍐欎负寰呯‘璁?| 杩囩▼鎬ф洿鏂帮紙濡傚€欓€夋柊澧?open/鎻忚堪鍙樺寲锛夊彲鍐欏叆骞舵爣璁?`Confirmed By: 寰呯‘璁銆佺櫥璁?`pending-changes.md`锛涚粓鎬侊紙closed/confirmed锛変粛楂橀闄╅渶纭 |
| `issues/issue-register.md` | 杩囩▼鎬ф洿鏂板彲鍐欎负寰呯‘璁?| 杩囩▼鎬ф洿鏂帮紙濡傚€欓€夋柊澧?open/鎻忚堪鍙樺寲锛夊彲鍐欏叆骞舵爣璁?`Confirmed By: 寰呯‘璁銆佺櫥璁?`pending-changes.md`锛涚粓鎬侊紙鍏抽棴锛変粛楂橀闄╅渶纭 |

### 5.6 鍙嶅悜鏌ヨ

鐢ㄦ埛鏌ヨ鏌愪汉宸ヤ綔鎯呭喌鏃讹紝AI 搴斾紭鍏堣鍙?`summaries/{name}-progress.md`锛岃€岄潪閫愭棩鎵弿鏃ユ姤锛涘闇€鏌愬ぉ缁嗚妭鍐嶈鍙栧搴旀棩鎶ャ€傛煡璇㈤摼璺細`璇ヤ汉褰撳墠浠诲姟 鈫?杈撳嚭褰撳墠浠诲姟+杩涘害+椋庨櫓+杩戞湡杩涘睍 鈫?闇€瑕佹椂璇诲叿浣撴棩鎶銆?
### 5.6b 寰呭姙绱㈠紩鍚屾

鏃ユ姤澶勭悊瀹屾垚鍚庯紝AI 蹇呴』鍚屾鏇存柊椤圭洰闆嗙骇寰呭姙绱㈠紩锛?
| 鏃ユ姤鍐呭 | 鍚屾鍒?| 瑙勫垯 |
|---|---|---|
| 鏄庢棩璁″垝 | `portfolio/todos/personal-todo-index.md` | 鎻愬彇涓?TODO-NNN锛孫wner=浣滆€咃紝Due=鏄庢棩 |
| 鏄庢棩璁″垝 | `portfolio/todos/daily-todo-index.md` | 杩藉姞鍒板搴旀棩鏈熷尯鍧?|
| 鏈懆璁″垝 | `portfolio/todos/weekly-todo-index.md` | 鎻愬彇涓烘湰鍛ㄩ噸鐐规潯鐩?|
| 浠诲姟杩涘睍 | `portfolio/todos/personal-todo-index.md` | 宸插畬鎴愨啋瀵瑰簲 TODO 鐘舵€?done |

**鍚屾鏉冮檺锛?* `personal-todo-index.md` / `daily-todo-index.md` / `weekly-todo-index.md` 鏄煡璇㈠姞閫熷眰锛岄潪浜嬪疄婧愶紝浣庨闄╁彲涓诲姩鏇存柊锛涚储寮曚笉瀛樺湪鍒欏垱寤哄苟鎻愮ず鐢ㄦ埛銆?
### 5.6c 蹇収涓庡疄闄呮墽琛岀敓鎴?
鏃ユ姤澶勭悊瀹屾垚鍚庯紝AI 蹇呴』鎵ц锛氱敓鎴愯鍒掑揩鐓э紙浠庢槑鏃ヨ鍒掓彁鍙栵紝snapshot_date=浠婂ぉ锛宼arget_date=鏄庡ぉ锛夈€佹洿鏂板巻鍙茬储寮曘€佺敓鎴愬疄闄呮墽琛屾憳瑕侊紙浠庝粖鏃ュ畬鎴?杩涜涓?闃诲鎻愬彇锛夈€傚揩鐓т笌瀹為檯鎵ц鎽樿灞炰綆椋庨櫓鍙富鍔ㄧ敓鎴愶紱蹇収鐢熸垚鍚庡喕缁擄紝淇敼闇€杩藉姞 Revision Log銆傝瑙?`15-snapshot-rules.md`銆?
### 5.7 鎵归噺鑱斿姩

鐢ㄦ埛涓€娆℃€ф彁浜ゅ浠芥棩鎶ユ椂锛孉I 蹇呴』锛氶€愪唤瑙ｆ瀽銆佷负姣忔垚鍛樺垎鍒緭鍑鸿仈鍔ㄥ缓璁€佸悎骞朵换鍔＄湅鏉挎洿鏂板缓璁紙鍚屼竴浠诲姟澶氫汉鎻愬強鍚堝苟涓轰竴鏉★級銆佸悎骞堕闄?闂鏇存柊寤鸿锛堝幓閲嶏級銆佺粺涓€杈撳嚭寤鸿鏇存柊娓呭崟銆?
### 5.8 褰掓。瑙﹀彂妫€鏌ワ紙鏃ユ姤澶勭悊娴佺▼鏈熬姝ラ锛?
姣忔鏃ユ姤澶勭悊娴佺▼鏈熬锛孉I 蹇呴』鎵ц Change Log 褰掓。瑙﹀彂妫€鏌ワ細

1. 璇诲彇娲昏穬鍖?Change Log锛堝 `tasks/change-log.md`銆乣risks/.../change-log.md` 绛夛級锛屽垽鏂槸鍚︽弧瓒冲綊妗ｆ潯浠躲€?2. 褰掓。瑙﹀彂鏉′欢锛氭椿璺冨尯 Change Log **瓒呰繃 50 琛?*锛屾垨**瓒呰繃 30 澶?*鏈綊妗ｃ€?3. 婊¤冻浠讳竴鏉′欢鏃讹紝瑙﹀彂鎸夋湀褰掓。锛氬皢娲昏穬鍖烘潯鐩寜鏈堜唤褰掓。鍒?`change-log/archive/YYYYMM-change-log.md`锛堣瑙?`06-file-rules.md`锛夛紝骞跺悓姝ョ淮鎶?`change-log/index.md` 鏈堜唤瀵艰埅绱㈠紩銆?4. 褰掓。鍚庢椿璺冨尯浠呬繚鐣欏綋鍓嶆椿璺冩潯鐩紝褰掓。鍖轰笌娲昏穬鍖轰笉寰楅噸澶嶃€?5. 涓?`14-self-check-rules.md` 鐨?D12 褰掓。妫€鏌ヨ仈鍔紱椤圭洰闆嗘ā寮忎笅鎸夊悇瀛愰」鐩?`change-log/archive/` 绮掑害褰掓。锛岄」鐩泦绾т粎缁存姢缁熶竴 `change-log/index.md`銆?6. **閫氱敤褰掓。妫€鏌?*锛氬湪 Change Log 褰掓。妫€鏌ュ悗锛岄『甯︽墽琛?06 鍙?搂9"閫氱敤褰掓。瑙勫垯"涓畾涔夌殑鍏ㄩ噺瀹炰綋褰掓。妫€鏌ワ紙鍚?risk/issue/decision/transfer-log/resource/snapshot/outputs 绱鍨嬫枃浠讹級銆傝Е鍙戞潯浠躲€佸綊妗ｇ洰鏍囦笌绱㈠紩瑕佹眰瑙?06 鍙?搂9 閫氱敤褰掓。琛ㄣ€?7. 褰掓。妫€鏌ョ粨鏋滈殢褰撴棩寤鸿鏇存柊娓呭崟涓€骞惰緭鍑猴紱娑夊強绉诲姩/褰掓。浜嬪疄婧愭枃浠剁殑鍔ㄤ綔璧?SUGGEST锛堝緟 PM 纭锛夛紝浠呮淳鐢熻鍥惧埛鏂拌蛋 AUTO銆?
> 绔埌绔伐浣滄祦鏁版嵁璺緞瑙?`00-pm-main-rules.md` 搂9锛圵F-1~WF-6锛夈€傛湰鏂囦欢瀹氫箟鏃ユ姤鐢熸垚鐨勮缁嗚鍒欙紝00鍙?搂9 WF-2 瀹氫箟鏃ユ姤澶勭悊鐨勫畬鏁磋/鍐欒矾寰勶紝涓よ€呬簰琛ヤ笉鏇夸唬銆?
